--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-cloudinary": "^6.17.5",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-phone-input-2": "^2.15.1",
