--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "next-cloudinary": "^6.17.5",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-datepicker": "^9.1.0",
