--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/postcss": "^4.1.12",
@@ -35,6 +36,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-phone-input-2": "^2.15.1",
+    "regenerator-runtime": "^0.14.1",
     "resend": "^6.3.0",
     "tailwindcss": "^4.1.12",
     "zod": "^4.1.12"
